--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
       <a-assets>
-    <video id="me" autoplay loop="false" src="https://drive.google.com/file/d/1WdKUfB7dR67Zc_8_P4WHV6gWycP9c8Af/view?usp=sharing"></video>
+    <video id="me" autoplay="true" loop="false" src="https://drive.google.com/file/d/1WdKUfB7dR67Zc_8_P4WHV6gWycP9c8Af/view?usp=sharing"></video>
   </a-assets>
 
   <!-- Using the asset management system. -->
