--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
   <!-- Using the asset management system. -->
   <a-video src="#me" width="16" height="9" position="0 0 -20"></a-video>
     <!-- define a camera which will move according to the marker position -->
-    <a-marker-camera preset='hiro'></a-marker-camera>
+    <a-entity camera="active: true" look-controls wasd-controls position="0 1.6 0" data-aframe-default-camera></a-entity>
   </a-scene>
 </body>
